# godot_web_tanmak

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  LAYOUT.md  README.md  export_presets.cfg  icon.svg.import  project.godot
backend/: README.md  main.py  pyproject.toml
deploy/: deploy.sh  nginx_tanmak.conf  tanmak-api.service
scenes/: Main.tscn
scenes/bullets/: BulletBomb.tscn  BulletCircle.tscn  BulletScatter.tscn
scenes/player/: Player.tscn
scripts/: Main.gd  Main.gd.uid
scripts/bullets/: BombBullet.gd  BombBullet.gd.uid  BulletBase.gd  BulletBase.gd.uid  BulletSpawner.gd  BulletSpawner.gd.uid  LinearBullet.gd  LinearBullet.gd.uid  ScatterBullet.gd  ScatterBullet.gd.uid  TelegraphBullet.gd  TelegraphBullet.gd.uid
scripts/config/: GameConfig.gd  GameConfig.gd.uid
scripts/core/: BulletPool.gd  BulletPool.gd.uid  EventBus.gd  EventBus.gd.uid  GameManager.gd  GameManager.gd.uid  ScoreClient.gd  ScoreClient.gd.uid  WaveManager.gd  WaveManager.gd.uid
scripts/data/: wave_data.gd  wave_data.gd.uid
scripts/enemy/: Enemy.gd  Enemy.gd.uid  FieldSpawner.gd  FieldSpawner.gd.uid
scripts/player/: Player.gd  Player.gd.uid  VirtualJoystick.gd  VirtualJoystick.gd.uid
scripts/ui/: HUD.gd  HUD.gd.uid  Leaderboard.gd  Leaderboard.gd.uid  Screens.gd  Screens.gd.uid
web/: .gitkeep
