# ============================================================
# TANMAK API - Python 프로젝트 설정 (uv 용)
# ------------------------------------------------------------
# 패키지 관리자 uv 를 사용한 FastAPI 프로젝트 설정
# ============================================================

[project]
name = "tanmak-api"
version = "0.1.0"
description = "TANMAK 오락실 순위표 FastAPI 백엔드"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

# ============================================================
# uv 설정
# ------------------------------------------------------------
# uv 가 자동으로 .venv 를 생성하고 의존성을 관리합니다.
# ============================================================

[tool.uv]
dev-dependencies = []
